--- a/VirtualPanelTest/Views/MainWindow.axaml
+++ b/VirtualPanelTest/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:VirtualPanelTest.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:fp="using:VirtualPanelTest.Controls.FortnitePorting"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="VirtualPanelTest.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -18,7 +19,7 @@
     <Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto,*"
           HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <TextBlock Margin="0 4" VerticalAlignment="Center">Standard</TextBlock>
-        <ListBox Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Items}"
+        <ListBox Grid.Column="0" Grid.Row="1" ItemsSource="{Binding StandardItems}"
                  Margin="1">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -27,18 +28,18 @@
             </ListBox.ItemsPanel>
         </ListBox>
 
-        <TextBlock Grid.Row="0" Grid.Column="1" Margin="0 4" VerticalAlignment="Center">Virtual 1</TextBlock>
-        <ListBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Items}"
+        <TextBlock Grid.Row="0" Grid.Column="1" Margin="0 4" VerticalAlignment="Center">FortnitePorting</TextBlock>
+        <ListBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding FortnitePortingItems}"
                  Margin="1">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel />
+                    <fp:VirtualizingWrapPanel />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
         </ListBox>
 
         <TextBlock Grid.Row="0" Grid.Column="2" Margin="0 4" VerticalAlignment="Center">Virtual 2</TextBlock>
-        <ListBox Grid.Row="1" Grid.Column="2" ItemsSource="{Binding Items}"
+        <ListBox Grid.Row="1" Grid.Column="2" ItemsSource="{Binding AnotherItems}"
                  Margin="1">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
